--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<link rel="manifest" href="manifest.json">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Spend</title>
     <script src ="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
@@ -20,15 +22,13 @@
 
 <script src="app.js"></script>
 
+<script>
+if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('sw.js');
+}
+</script>
 
 </body>
-
-
-
-
-
-
-
 
 
 </html>
