Fix stylesheet path in add-transaction.html

--- a/add-transaction.html
+++ b/add-transaction.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
@@ -42,3 +42,4 @@
 
 </body>
 </html>
+
