--- a/dashboard.html
+++ b/dashboard.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <script src ="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="./css/style.css">
 
 </head>
 <body>
@@ -55,4 +55,5 @@ if ('serviceWorker' in navigator) {
 
 
 </body>
+
 </html>
