--- a/envelopes.html
+++ b/envelopes.html
@@ -7,7 +7,7 @@
 <link rel="manifest" href="manifest.json">
 
     <script src ="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <div class="login-container">
@@ -80,3 +80,4 @@ if ('serviceWorker' in navigator) {
 
 </body>
 </html>
+
