--- a/envelopes.html
+++ b/envelopes.html
@@ -7,7 +7,7 @@
 <link rel="manifest" href="manifest.json">
 
     <script src ="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<link rel="stylesheet" href="./css/style.css">
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="login-container">
@@ -71,7 +71,7 @@
 <button type="button" id="backToDashboard">Back to Dashboard</button>
 
     </div>
-    <script src="envelopes.js"></script>
+<script src="js/envelopes.js"></script>
     <script>
 if ('serviceWorker' in navigator) {
   navigator.serviceWorker.register('sw.js');
@@ -80,4 +80,3 @@ if ('serviceWorker' in navigator) {
 
 </body>
 </html>
-
