--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Spend</title>
     <script src ="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 <div class="login-container">
@@ -20,7 +20,7 @@
 
 </div>
 
-<script src="app.js"></script>
+<script src="js/app.js"></script>
 
 <script>
 if ('serviceWorker' in navigator) {
