Fix paths for CSS and JS files in overview.html
Updated stylesheet and script paths in overview.html.

--- a/overview.html
+++ b/overview.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="manifest" href="manifest.json" />
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<link rel="stylesheet" href="./css/style.css">
+<link rel="stylesheet" href="/E-Spend/css/style.css">
 </head>
 <body>
   <div class="login-container">
@@ -42,7 +42,7 @@
     <button type="button" id="backToDashboard">Back to Dashboard</button>
   </div>
 
-<script src="js/overview.js"></script>
+<script src="/E-Spend/js/overview.js"></script>
   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('sw.js');
@@ -50,3 +50,4 @@
   </script>
 </body>
 </html>
+
