Fix HTML formatting and structure in dashboard.html

--- a/dashboard.html
+++ b/dashboard.html
@@ -46,7 +46,7 @@
     <button id="logoutButton">Logout</button>
     <div id="contentArea">
     </div>
-<script src="js/dashboard.js"></script>
+<script src="/E-Spend/js/dashboard.js"></script>
 <script>
 if ('serviceWorker' in navigator) {
   navigator.serviceWorker.register('sw.js');
@@ -57,4 +57,5 @@ if ('serviceWorker' in navigator) {
 </body>
 
 </html>
+
 
