--- a/add-transaction.html
+++ b/add-transaction.html
@@ -38,8 +38,9 @@
     </button>
   </div>
 
-<script src="js/add-transaction.js"></script>
+<script src="/E-Spend/js/add-transaction.js"></script>
 
 </body>
 </html>
+
 
