Refactor envelopes.html and fix back button
Updated the HTML structure and fixed the back button functionality.

--- a/envelopes.html
+++ b/envelopes.html
@@ -68,7 +68,11 @@
 </div>
 
         <br>
-<button type="button" id="backToDashboard">Back to Dashboard</button>
+<button 
+  type="button"
+  onclick="window.location.href='/E-Spend/dashboard.html'">
+  Back to Dashboard
+</button>
 
     </div>
 <script src="/E-Spend/js/envelopes"></script>
@@ -80,5 +84,6 @@ if ('serviceWorker' in navigator) {
 
 </body>
 </html>
+
 
 
