Fix HTML formatting and update script references

--- a/envelopes.html
+++ b/envelopes.html
@@ -75,7 +75,7 @@
 </button>
 
     </div>
-<script src="/E-Spend/js/envelopes"></script>
+<script src="/E-Spend/js/envelopes.js"></script>
     <script>
 if ('serviceWorker' in navigator) {
   navigator.serviceWorker.register('sw.js');
@@ -84,6 +84,7 @@ if ('serviceWorker' in navigator) {
 
 </body>
 </html>
+
 
 
 
