Fix HTML structure and update button links

--- a/dashboard.html
+++ b/dashboard.html
@@ -16,25 +16,26 @@
 
   <button id="darkModeToggle">Toggle Dark Mode</button>
 
-  <button onclick="window.location.href='envelopes.html'">
-    Go to Envelopes
-  </button>
+<button onclick="window.location.href='/E-Spend/envelopes.html'">
+  Go to Envelopes
+</button>
 
-  <button onclick="window.location.href='overview.html'">
-    Spending Overview
-  </button>
+<button onclick="window.location.href='/E-Spend/overview.html'">
+  Spending Overview
+</button>
 
-  <button onclick="window.location.href='add-transaction.html'">
-    Add Transaction
-  </button>
+<button onclick="window.location.href='/E-Spend/add-transaction.html'">
+  Add Transaction
+</button>
 
-  <button onclick="window.location.href='transactions.html'">
-    View Transaction History
-  </button>
+<button onclick="window.location.href='/E-Spend/transactions.html'">
+  View Transaction History
+</button>
 
-  <button onclick="window.location.href='savings.html'">
-    Savings Goals
-  </button>
+<button onclick="window.location.href='/E-Spend/savings.html'">
+  Savings Goals
+</button>
+
 
 </div>
 
@@ -57,5 +58,6 @@ if ('serviceWorker' in navigator) {
 </body>
 
 </html>
+
 
 
