Fix HTML formatting and service worker registration

--- a/envelopes.html
+++ b/envelopes.html
@@ -78,12 +78,13 @@
 <script src="/E-Spend/js/envelopes.js"></script>
     <script>
 if ('serviceWorker' in navigator) {
-  navigator.serviceWorker.register('sw.js');
+navigator.serviceWorker.register('/E-Spend/sw.js');
 }
 </script>
 
 </body>
 </html>
+
 
 
 
