--- a/transactions.html
+++ b/transactions.html
@@ -26,12 +26,14 @@
     <div id="transactionsList"></div>
 
     <br>
-    <button onclick="window.location.href='dashboard.html'">
-      Back to Dashboard
-    </button>
+<button onclick="window.location.href='/E-Spend/dashboard.html'">
+  Back to Dashboard
+</button>
+
   </div>
 
 <script src="/E-Spend/js/transactions.js"></script>
 
 </body>
 </html>
+
