Add favicon link to dashboard.html
Added a favicon link to the dashboard.

--- a/dashboard.html
+++ b/dashboard.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <link rel="manifest" href="manifest.json">
+  <link rel="shortcut icon" type="image/x-icon" href=""C:\Users\alamn\Desktop\MYPROJECTS\e-spend\favicon.ico"" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
@@ -57,6 +58,7 @@ if ('serviceWorker' in navigator) {
 </body>
 
 </html>
+
 
 
 
