--- a/add-transaction.html
+++ b/add-transaction.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Add Transaction</title>
+  <link rel="icon" href="/E-Spend/favicon.ico">
+<link rel="apple-touch-icon" href="/E-Spend/apple-touch-icon.png">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
@@ -42,5 +45,6 @@
 
 </body>
 </html>
+
 
 
