Add favicon and apple-touch-icon to dashboard
Added favicon and apple-touch-icon links to the head section.

--- a/dashboard.html
+++ b/dashboard.html
@@ -5,6 +5,9 @@
 <link rel="manifest" href="manifest.json">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
+    <link rel="icon" href="/E-Spend/favicon.ico">
+<link rel="apple-touch-icon" href="/E-Spend/apple-touch-icon.png">
+
     <script src ="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <link rel="stylesheet" href="/E-Spend/css/style.css">
 
@@ -56,6 +59,7 @@ if ('serviceWorker' in navigator) {
 </body>
 
 </html>
+
 
 
 
