--- a/envelopes.html
+++ b/envelopes.html
@@ -5,7 +5,8 @@
     <title>Envelopes</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="manifest" href="manifest.json">
-
+<link rel="icon" href="/E-Spend/favicon.ico">
+<link rel="apple-touch-icon" href="/E-Spend/apple-touch-icon.png">
     <script src ="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <link rel="stylesheet" href="/E-Spend/css/style.css">
 </head>
@@ -84,6 +85,7 @@ navigator.serviceWorker.register('/E-Spend/sw.js');
 
 </body>
 </html>
+
 
 
 
