--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Spend</title>
+    <link rel="icon" href="/E-Spend/favicon.ico">
+<link rel="apple-touch-icon" href="/E-Spend/apple-touch-icon.png">
     <script src ="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <link rel="stylesheet" href="/E-Spend/css/style.css">
 </head>
@@ -32,4 +34,5 @@ if ('serviceWorker' in navigator) {
 
 
 </html>
+
 
