--- a/overview.html
+++ b/overview.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" href="/E-Spend/favicon.ico">
+<link rel="apple-touch-icon" href="/E-Spend/apple-touch-icon.png">
   <title>Spending Overview</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="manifest" href="manifest.json" />
@@ -50,3 +52,4 @@
   </script>
 </body>
 </html>
+
