--- a/transactions.html
+++ b/transactions.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <title>Transaction History</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<link rel="icon" href="/E-Spend/favicon.ico">
+<link rel="apple-touch-icon" href="/E-Spend/apple-touch-icon.png">
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <link rel="stylesheet" href="/E-Spend/css/style.css">
 </head>
@@ -36,4 +37,5 @@
 
 </body>
 </html>
+
 
